--- a/samples/WP8/NuGetFinder.WP8/App.xaml
+++ b/samples/WP8/NuGetFinder.WP8/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application
-    x:Class="NuGetFinder.WinPhone.App"
+    x:Class="NuGetFinder.WP8.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -7,7 +7,7 @@
 
     <!--Application Resources-->
     <Application.Resources>
-        <local:LocalizedStrings xmlns:local="clr-namespace:NuGetFinder.WinPhone" x:Key="LocalizedStrings"/>
+        <local:LocalizedStrings xmlns:local="clr-namespace:NuGetFinder.WP8" x:Key="LocalizedStrings"/>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
